Fix captions on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,10 @@ a {
 }
 
 @media only screen and (max-width: 768px) {
+  .caption {
+    position: relative;
+  }
+
   .thumb-caption {
     padding: 0.5em;
   }
